ncurses-6.3/form/form.h

typedef int Form_Options;
extern FORM_EXPORT(int)	set_new_page (FIELD *,bool);
extern FORM_EXPORT(bool)	new_page (const FIELD *);
	/******************
	*  FORM routines  *
	******************/

extern FORM_EXPORT(FORM *)	new_form (FIELD **);
extern FORM_EXPORT(FIELD *)	current_field (const FORM *);
extern FORM_EXPORT(int)	free_form (FORM *);
extern FORM_EXPORT(int)	set_current_field (FORM *,FIELD *);
extern FORM_EXPORT(int)	field_index (const FIELD *);
extern FORM_EXPORT(int)	set_form_page (FORM *,int);
extern FORM_EXPORT(int)	form_page (const FORM *);
extern FORM_EXPORT(int)	post_form (FORM *);
extern FORM_EXPORT(int)	unpost_form (FORM *);
extern FORM_EXPORT(int)	pos_form_cursor (FORM *);
extern FORM_EXPORT(int)	form_driver (FORM *,int);
extern FORM_EXPORT(int)	set_form_opts (FORM *,Form_Options);
extern FORM_EXPORT(int)	form_opts_on (FORM *,Form_Options);
extern FORM_EXPORT(int)	form_opts_off (FORM *,Form_Options);
extern FORM_EXPORT(Form_Options)	form_opts (const FORM *);
extern FORM_EXPORT(bool)	data_ahead (const FORM *);
extern FORM_EXPORT(bool)	data_behind (const FORM *);
extern FORM_EXPORT(FORM *)	NCURSES_SP_NAME(new_form) (SCREEN*, FIELD **);